--- a/app/src/main/res/layout/fragment_list_ticket.xml
+++ b/app/src/main/res/layout/fragment_list_ticket.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv3"
+            android:id="@+id/rvList"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
